# bayes-kit

./: .gitignore  CONTRIBUTING.md  DiagonalHMC.py  LICENSE  LICENSE-CODE  README.md  model_types.py  pyproject.toml  setup.cfg  temp.ipynb
.github/workflows/: main.yml
bayes-infer/: ess.py  hmc.py  metropolis.py  r-hat.py  types.py
bayes_infer/: __init__.py  ensemble.py  ess.py  hmc.py  mala.py  rwm.py  smc.py
bayes_kit/: __init__.py  autocorr.py  drghmc.py  drhmc.py  drhmc_final.py  drhmc_iter.py  ensemble.py  ess.py  hmc.py  iat.py  importance.py  mala.py  maladr.py  metropolis.py  model_types.py  pareto_smooth.py  protocols.py  r_hat.py  rhat.py  rwm.py  smc.py  temp.ipynb  typing.py
bayes_kit/algorithms/: __init__.py  base_mcmc.py  hmc.py  mala.py  metropolis.py  smc.py
bayes_kit/approximations/: __init__.py  sampling.py
bayes_kit/types/: __init__.py  inference.py  interface.py  models.py  numeric.py
example-models/: std-normal.py
test/: conftest.py  test_autocorr.py  test_drghmc.py  test_drhmc.py  test_ensemble.py  test_equivalencies.py  test_ess.py  test_hmc.py  test_iat.py  test_inferencealgorithm_protocols.py  test_mala.py  test_metropolis.py  test_rhat.py  test_rwm.py  test_tempered_smc.py  test_theta_initialization.py
test/models/: __init__.py  beta_binomial.py  binomial.py  skew_normal.py  std_normal.py
