[metadata]
name = bayes_kit
version = 0.0.1
license_files=LICENSE-CODE
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/flatironinstitute/bayes-kit

[options]
python_requires = >=3.9
install_requires =
    numpy>=1.17.0
packages = find:

[options.extras_require]
test =
    pytest
    pytest-coverage
    scipy
